// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for AlgoliaInsights's conversionEvents destination action: all fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Conversion Event",
      "eventType": "conversion",
      "index": ")j)vR5%1AP*epuo8A%R",
      "objectIDs": Array [
        ")j)vR5%1AP*epuo8A%R",
      ],
      "products": Array [
        Object {
          "product_id": ")j)vR5%1AP*epuo8A%R",
        },
      ],
      "queryID": ")j)vR5%1AP*epuo8A%R",
      "timestamp": null,
      "userToken": ")j)vR5%1AP*epuo8A%R",
    },
  ],
}
`;

exports[`Testing snapshot for AlgoliaInsights's conversionEvents destination action: required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Conversion Event",
      "eventType": "conversion",
      "index": ")j)vR5%1AP*epuo8A%R",
      "objectIDs": Array [
        ")j)vR5%1AP*epuo8A%R",
      ],
      "products": Array [
        Object {
          "product_id": ")j)vR5%1AP*epuo8A%R",
        },
      ],
      "queryID": ")j)vR5%1AP*epuo8A%R",
      "timestamp": 1674843786677,
      "userToken": ")j)vR5%1AP*epuo8A%R",
    },
  ],
}
`;
